Fix a bug on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    width: 10vw;
+    width: 200px;
     height: 100vh;
     background: black;
     z-index: 2;
